fixed overflow on logo card and margined form

--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ table {
 /* start of actual css */
 body {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: auto 1fr;
   grid-template-areas: "img form";
 }
 aside {
@@ -165,6 +165,7 @@ form {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas: "text" "fieldset" "submit";
+  margin-left: 35px;
 }
 
 aside {
